fix: code style on mobile view

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -59,20 +59,24 @@
   @apply my-0 rounded-t-none;
 }
 
+[data-rehype-pretty-code-fragment] pre {
+  @apply py-2 px-0;
+}
+
 [data-rehype-pretty-code-fragment] .code-highlight {
-  @apply min-w-full;
+  @apply grid;
 }
 
 [data-rehype-pretty-code-fragment] .code-line {
-  @apply flex w-full;
+  @apply grid;
 }
 
 div[data-rehype-pretty-code-fragment] .line {
-  @apply w-full border-l-4 border-l-transparent pl-2 pr-3;
+  @apply w-full border-l-4 border-l-transparent pl-3 pr-3;
 }
 
 div[data-rehype-pretty-code-fragment] .line--highlighted {
-  @apply border-l-purple-400 bg-gray-100/10;
+  @apply border-l-purple-400 bg-gray-400/10;
 }
 
 code[data-line-numbers] {
